# quix

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  test1.py
docker/: Dockerfile.riscv
quix/bootstrap/: __init__.py  macrocode.py  program.py  reduce_program.py
quix/bootstrap/ast/: __init__.py  build.py  node.py  reduce.py
quix/bootstrap/dtypes/: __init__.py  array.py  base.py  const.py  unit.py  wide.py
quix/bootstrap/macrocodes/: __init__.py  add_unit.py  add_unit_carry.py  add_wide.py  add_wide_carry.py  and_unit.py  and_wide.py  assign_unit.py  assign_wide.py  call_eq_unit.py  call_eq_wide.py  call_ge_unit.py  call_ge_unit_signed.py  call_ge_wide.py  call_ge_wide_signed.py  call_gt_unit.py  call_gt_unit_signed.py  call_gt_wide.py  call_gt_wide_signed.py  call_le_unit.py  call_le_unit_signed.py  call_le_wide.py  call_le_wide_signed.py  call_lt_unit.py  call_lt_unit_signed.py  call_lt_wide.py  call_lt_wide_signed.py  call_neq_unit.py  call_neq_wide.py  call_z_unit.py  call_z_wide.py  clear_unit.py  clear_wide.py  comment.py  consts.py  copy_unit.py  copy_wide.py  dec_wide.py  div_unit.py  div_wide.py  (+29 more)
quix/bootstrap/optimizer/: __init__.py
quix/bootstrap/reducer/: __init__.py  reduce.py
quix/cli/: cli.py
quix/cli/commands/: build.py  execute.py
quix/cli/compiler/: bf_compiler.py
quix/cli/utils/: datatool.py  error_handler.py
quix/compiler/: __init__.py  compile.py
quix/compiler/artifact/: __init__.py  artifact.py  code.py  header.py
quix/compiler/stages/: __init__.py  base.py  bf_generator.py  build_ast.py  compile_riscv.py  load_riscv.py  mem_compile.py  optimize_ast.py  pipe.py  reduce_ast.py  scheduler.py
quix/core/: decompiler.py  values.py  var.py
quix/core/compiler/: __init__.py  base.py  pointer.py  types.py  visitor.py
quix/core/interfaces/: __init__.py  opcode.py  readable.py  visitor.py  writable.py
quix/core/opcodes/: __init__.py  base.py  dtypes.py  opcodes.py
quix/core/utils/: case.py
quix/core/visitor/: __init__.py  base.py
quix/exceptions/: __init__.py  base.py
quix/exceptions/core/: __init__.py  base.py  layout.py  visitor.py
quix/exceptions/scheduler/: __init__.py  base.py  model.py
quix/exec/simple/: __init__.py  executor.py  memory.py  utils.py
quix/memoptix/: __init__.py  compile.py  opcodes.py  schedule.py  utils.py
quix/memoptix/scheduler/: __init__.py  blueprint.py  layout.py  (+3 more)
quix/memoptixv2/: __init__.py  compile.py  resolve.py  utils.py
quix/scheduler/: __init__.py  blueprint.py  layout.py  owner.py  scheduler.py  utils.py
quix/tools/: __init__.py  case.py  check.py  dispatcher.py  flyweight.py  get_root.py  log.py  math.py  silence.py  singleton.py  state.py  unique.py
src/core/: pyproject.toml
tests/core/: opcodes.py  var.py
tests/memoptix/: get_ref_scopes.py
tests/tools/: case.py
(+292 files in other folders)
