[project]
dependencies = [
  "multimethod>=2.0",
  "rich>=14.0.0",
]
description = "Add your description here"
name = "quix"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[dependency-groups]
dev = [
  "mypy>=1.15.0",
  "pre-commit>=4.2.0",
  "pytest>=8.3.5",
  "ruff>=0.11.6",
]

[tool.mypy]
check_untyped_defs = true
disable_error_code = []
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
exclude = ".venv"
follow_imports_for_stubs = true
ignore_missing_imports = false
namespace_packages = true
no_implicit_optional = true
pretty = true
show_absolute_path = true
show_error_codes = true
show_error_context = true
strict = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
exclude = [".venv"]
fix = true
line-length = 120
lint.ignore = [
  "B008",
  "C901",
  "W191",
  "UP007",
  "UP006",
]
lint.select = [
  "E",
  "W",
  "F",
  "I",
  "C",
  "B",
  "UP",
]
unfixable = ["F841"]
unsafe-fixes = true

[tool.pytest.ini_options]
python_files = "tests/*.py"
